하라니까 했다.

--- a/PmFront/src/main/webapp/html/balancegame.html
+++ b/PmFront/src/main/webapp/html/balancegame.html
@@ -15,7 +15,7 @@
       </div>
       <div class="vs">
         VS
-      </div>
+      </div>b
       <div class ="choose">
         선택지 B
       </div>
